:lipstick: Stop layout shift when popup opened

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -124,5 +124,7 @@ button.red:hover {
 }
 
 .noscroll {
-	overflow: hidden;
+	position: fixed;
+	width: 100%;
+	overflow-y: scroll;
 }
